--- a/LoginEkrani/LoginEkrani/LoginEkrani.csproj
+++ b/LoginEkrani/LoginEkrani/LoginEkrani.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Form4.Designer.cs">
       <DependentUpon>Form4.cs</DependentUpon>
     </Compile>
+    <Compile Include="OgrenciDersEkleme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrenciDersEkleme.Designer.cs">
+      <DependentUpon>OgrenciDersEkleme.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form4.resx">
       <DependentUpon>Form4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrenciDersEkleme.resx">
+      <DependentUpon>OgrenciDersEkleme.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
