--- a/LoginEkrani/LoginEkrani/LoginEkrani.csproj
+++ b/LoginEkrani/LoginEkrani/LoginEkrani.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="attendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="attendance.Designer.cs">
+      <DependentUpon>attendance.cs</DependentUpon>
+    </Compile>
     <Compile Include="DersIslemleri.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,12 @@
     <Compile Include="Form5.Designer.cs">
       <DependentUpon>Form5.cs</DependentUpon>
     </Compile>
+    <Compile Include="listofGrades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="listofGrades.Designer.cs">
+      <DependentUpon>listofGrades.cs</DependentUpon>
+    </Compile>
     <Compile Include="OgrenciDersEkleme.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +108,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="studentInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="studentInformation.Designer.cs">
+      <DependentUpon>studentInformation.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="attendance.resx">
+      <DependentUpon>attendance.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DersIslemleri.resx">
       <DependentUpon>DersIslemleri.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +138,9 @@
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="listofGrades.resx">
+      <DependentUpon>listofGrades.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OgrenciDersEkleme.resx">
       <DependentUpon>OgrenciDersEkleme.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,6 +153,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="studentInformation.resx">
+      <DependentUpon>studentInformation.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
